fix details overflow; closes #1149

--- a/packages/webawesome/src/components/details/details.css
+++ b/packages/webawesome/src/components/details/details.css
@@ -122,7 +122,7 @@ details {
   display: none;
 }
 
-.body {
+.body.animating {
   overflow: hidden;
 }
 
